--- a/_puff/nginx.conf
+++ b/_puff/nginx.conf
@@ -1,133 +1,103 @@
-#### Redirect HTTP to HTTPS
+# ~/certbot-with-nginx/renew-ssl.sh -d devede.org -d www.devede.org
+
+####	On-line Verification & Redirection
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server ipv6only=on;
-	server_name _;
-	return 301 https://$server_name$request_uri;
+	listen 80;
+	listen [::]:80;
+	server_name devede.org www.devede.org;
+	error_log /var/log/nginx/devede.org.log notice;
+	access_log off;
+	location '/.well-known/acme-challenge' {
+		default_type 'text/plain';
+		root /tmp/certbot-with-nginx;
+	}
+	location / {
+		return 301 https://devede.org$request_uri;
+	}
 }
 
+####	HTTPS Redirection
 server {
-
-	listen 443 ssl spdy deferred;
-	listen [::]:443 ipv6only=on ssl spdy deferred;
-
-	server_name example.com;
-	root /path/to/site;
-
-	error_log /var/log/nginx/error.log notice;
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
+	server_name www.devede.org;
+	error_log /var/log/nginx/devede.org.log notice;
 	access_log off;
-	index index.php index.html index.htm;
-
-	location / {
-		autoindex off;
-		try_files $uri $uri/ @extensionless-php;
+	location '/.well-known/acme-challenge' {
+		default_type 'text/plain';
+		root /tmp/certbot-with-nginx;
 	}
+	location / {
+		return 301 https://devede.org$request_uri;
+	}
+	add_header Strict-Transport-Security "max-age=63072000";
+	add_header X-Frame-Options DENY;
+	ssl on;
+	ssl_certificate /etc/letsencrypt/live/devede.org/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/devede.org/privkey.pem;
+	ssl_stapling on;
+	ssl_stapling_verify on;
+	ssl_trusted_certificate /etc/letsencrypt/live/devede.org/fullchain.pem;
+	resolver 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 216.146.35.35 216.146.36.36 valid=300s;
+	resolver_timeout 3s;
+	ssl_session_cache shared:SSL:100m;
+	ssl_session_timeout 24h;
+	ssl_session_tickets on;
+	ssl_session_ticket_key /etc/nginx/ssl/ticket.key;
+	ssl_dhparam /etc/nginx/ssl/dhparam4.pem;
+	ssl_ecdh_curve secp384r1;
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
+}
+
+####	Main Server Block
+server {
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
+	server_name devede.org;
+	root /home/megan/devede.org;
+	index index.php index.html index.htm;
+	error_log /var/log/nginx/devede.org.log notice;
+	access_log off;
+	location / {
+		autoindex on;
+		try_files $uri $uri.html $uri/ @extensionless-php;
+	}
+	location ~* \.(html|css|js|png|jpg|jpeg|gif|ico|svg|eot|woff|ttf)$ { expires max; }
 	location @extensionless-php {
 		rewrite ^(.*)$ $1.php last;
 	}
-	# Pass PHP Files to Fast CGI
 	location ~ \.php$ {
 		try_files $uri =404;
 		include /etc/nginx/fastcgi_params;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		fastcgi_index index.php;
-		include fastcgi_params;
-		#fastcgi_param PHP_VALUE "newrelic.appname=Puff";
+		include /etc/nginx/fastcgi_params;
+		fastcgi_pass unix:/var/run/php7.0-fpm.sock;
+		fastcgi_param PHP_VALUE "newrelic.appname=devede.org";
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_pass unix:/var/run/php5-fpm.sock;
 	}
-
-
-	#### Hidden Files
-	location ~ /\. {
-		deny all;
-	}
-	location ~ /\_ {
-		deny all;
-	}
-
-
-	#### Charset
-	charset utf-8;
-	location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|eot|woff|ttf)$ { expires max; }
-
-
-	#### Headers
-
-	## Access-Control-Allow-Origin
-	# CORS: Cross-Origin Resource Sharing
-	add_header Access-Control-Allow-Origin "origin";
-	# add_header Access-Control-Allow-Origin "*";
-
-	## Cache-Control
-	# Prevents network providers from modifying your site
-	add_header Cache-Control "no-transform";
-
-	## Frame-Options
-	# Stops pages being displayed in iFrames.
-	# Default: DENY
-	# Options:
-	# - SAMEORIGIN
-	# - ALLOW-FROM $var
-	add_header Frame-Options DENY;
+	location ~ /\. { deny all; }
+	location ~ /\_ { deny all; }
+	error_page 404 /404.php;
+	add_header Strict-Transport-Security "max-age=63072000";
 	add_header X-Frame-Options DENY;
-
-	## Strict-Transport-Security
-	# Disallows connections over insecure channels.
-	# Defaults to on for https, off for http.
-	add_header Strict-Transport-Security "max-age=31536000; preload";
-	# add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
-
-	## X-Content-Type-Options
-	# Stop content loading as a different MIME Type.
-	# Default: NOSNIFF
-	add_header X-Content-Type-Options NOSNIFF;
-
-	## X-UA-Compatible
-	# Tell IE we are modern.
-	add_header X-UA-Compatible "IE=Edge";
-
-	## X-XSS-Protection
-	# Stops pages being compromised by cross-site scripting.
-	# Default: 1
-	# Alternative: 0
-	add_header X-XSS-Protection "1; mode=block";
-
-
-	#### Spdy
-	add_header Alternate-Protocol 443:npn-spdy/3;
-	spdy_keepalive_timeout 300; # up from 180 secs default
-	spdy_headers_comp 9;
-
-
-	#### SSL
-	# SSLs `server.key` is created in Generation.sh
 	ssl on;
-	ssl_certificate /etc/nginx/ssl/site-bundle.crt;
-	ssl_certificate_key /etc/nginx/ssl/server.key;
-	ssl_session_timeout 10m;
-	ssl_session_cache shared:SSL:10m;
-	# SSL Session Tickets are created in Generation.sh
-	ssl_session_tickets on;
-	ssl_session_ticket_key /etc/nginx/ssl/ticket.key;
-
-
-	#### OCSP stapling
+	ssl_certificate /etc/letsencrypt/live/devede.org/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/devede.org/privkey.pem;
 	ssl_stapling on;
 	ssl_stapling_verify on;
-	resolver 8.8.8.8 8.8.4.4 216.146.35.35 216.146.36.36 valid=300s;
+	ssl_trusted_certificate /etc/letsencrypt/live/devede.org/fullchain.pem;
+	resolver 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 216.146.35.35 216.146.36.36 valid=300s;
 	resolver_timeout 3s;
-
-
-	#### Protocols and Ciphers
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-	#ssl_protocols TLSv1.1 TLSv1.2;
-	#ssl_protocols TLSv1.2;
-	ssl_prefer_server_ciphers on;
-	ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
-	#ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH:ECDHE-RSA-AES128-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA128:DHE-RSA-AES128-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA128:ECDHE-RSA-AES128-SHA384:ECDHE-RSA-AES128-SHA128:ECDHE-RSA-AES128-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES128-SHA128:DHE-RSA-AES128-SHA128:DHE-RSA-AES128-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA384:AES128-GCM-SHA128:AES128-SHA128:AES128-SHA128:AES128-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
-	ssl_ecdh_curve secp521r1;
-	# SSL DH Parameters are created in Generation.sh
+	ssl_session_cache shared:SSL:100m;
+	ssl_session_timeout 24h;
+	ssl_session_tickets on;
+	ssl_session_ticket_key /etc/nginx/ssl/ticket.key;
 	ssl_dhparam /etc/nginx/ssl/dhparam4.pem;
-
+	ssl_ecdh_curve secp384r1;
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
 }
