--- a/_puff/nginx.conf
+++ b/_puff/nginx.conf
@@ -1,103 +1,179 @@
+####	Config from Bubbly: Certbot with Nginx v.1.7
+# https://github.com/eustasy/bubbly
+
+# Replace "devede.org" with your domain.
+# Search for [WARNING] to find common warnings.
+# Search for [OPTION] to find options.
+# [DEFAULT] denotes a default option choice.
+
+
 # ~/certbot-with-nginx/renew-ssl.sh -d devede.org -d www.devede.org
 
-####	On-line Verification & Redirection
-server {
-	listen 80;
-	listen [::]:80;
-	server_name devede.org www.devede.org;
-	error_log /var/log/nginx/devede.org.log notice;
-	access_log off;
-	location '/.well-known/acme-challenge' {
-		default_type 'text/plain';
-		root /tmp/certbot-with-nginx;
-	}
-	location / {
-		return 301 https://devede.org$request_uri;
-	}
-}
 
-####	HTTPS Redirection
-server {
-	listen 443 ssl http2;
-	listen [::]:443 ssl http2;
-	server_name www.devede.org;
-	error_log /var/log/nginx/devede.org.log notice;
-	access_log off;
-	location '/.well-known/acme-challenge' {
-		default_type 'text/plain';
-		root /tmp/certbot-with-nginx;
-	}
-	location / {
-		return 301 https://devede.org$request_uri;
-	}
-	add_header Strict-Transport-Security "max-age=63072000";
-	add_header X-Frame-Options DENY;
-	ssl on;
-	ssl_certificate /etc/letsencrypt/live/devede.org/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/devede.org/privkey.pem;
-	ssl_stapling on;
-	ssl_stapling_verify on;
-	ssl_trusted_certificate /etc/letsencrypt/live/devede.org/fullchain.pem;
-	resolver 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 216.146.35.35 216.146.36.36 valid=300s;
-	resolver_timeout 3s;
-	ssl_session_cache shared:SSL:100m;
-	ssl_session_timeout 24h;
-	ssl_session_tickets on;
-	ssl_session_ticket_key /etc/nginx/ssl/ticket.key;
-	ssl_dhparam /etc/nginx/ssl/dhparam4.pem;
-	ssl_ecdh_curve secp384r1;
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-	ssl_prefer_server_ciphers on;
-	ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
-}
+####	HTTP Redirection & Verification Block
+include nginx.verify.conf;
 
-####	Main Server Block
+
+
+####	HTTPS Redirection Block
 server {
-	listen 443 ssl http2;
-	listen [::]:443 ssl http2;
+
+	####	Listen Directive
+	# [OPTION] HTTP2 or SPDY dependent on your Nginx version.
+	# [WARNING] Making an incorrect selection will result in a non-working site.
+
+	# Option 1. [DEFAULT] HTTP2 for Nginx >= 1.9.5
+	listen 443 deferred ssl http2;
+	listen [::]:443 deferred ssl http2;
+
+	# Option 2. SPDY for Nginx < 1.9.5
+	#listen 443 deferred ssl spdy;
+	#listen [::]:443 deferred ssl spdy;
+	#spdy_headers_comp 9;
+
+
+	####	Core Configuration
+	# [OPTION] Server Name
 	server_name devede.org;
-	root /home/megan/devede.org;
-	index index.php index.html index.htm;
-	error_log /var/log/nginx/devede.org.log notice;
+
+
+	####	Logs
+	# [OPTION] Set access log location.
+	# [DEFAULT] off;
 	access_log off;
+
+	# [OPTION] Set error log location.
+	error_log /var/log/nginx/devede.org.log notice;
+
+
+	####	Redirection from www.HTTPS to root.HTTPS
+	# [OPTION] Server Name
 	location / {
-		autoindex on;
-		try_files $uri $uri.html $uri/ @extensionless-php;
+		return 301 https://devede.org$request_uri;
 	}
-	location ~* \.(html|css|js|png|jpg|jpeg|gif|ico|svg|eot|woff|ttf)$ { expires max; }
+
+
+	####	Let's Encrypt Pass-Through
+	include nginx.well-known.conf;
+
+
+	####	SSL Inclusion
+	include nginx.ssl.conf;
+
+}
+
+
+
+####	Main HTTPS Block
+server {
+
+	####	Listen Directive
+	# [OPTION] HTTP2 or SPDY dependent on your Nginx version.
+	# [WARNING] Making an incorrect selection will result in a non-working site.
+
+	# Option 1. [DEFAULT] HTTP2 for Nginx >= 1.9.5
+	listen 443 deferred ssl http2;
+	listen [::]:443 deferred ssl http2;
+
+	# Option 2. SPDY for Nginx < 1.9.5
+	#listen 443 deferred ssl spdy;
+	#listen [::]:443 deferred ssl spdy;
+	#spdy_headers_comp 9;
+
+
+	####	Core Configuration
+	# [OPTION] Server Name
+	server_name devede.org;
+
+	# [OPTION] Root Path
+	root /path/to/devede.org;
+
+	# [OPTION] Index Entries
+	index index.php index.html index.htm;
+
+	# [OPTION] Automatic Indexes
+	autoindex off;
+
+
+	####	Logs
+	# [OPTION] Set access log location.
+	# [DEFAULT] off;
+	access_log off;
+
+	# [OPTION] Set error log location.
+	error_log /var/log/nginx/devede.org.log notice;
+
+
+	####	Let's Encrypt Pass-Through
+	location '/.well-known/acme-challenge' {
+		default_type 'text/plain';
+		root /tmp/certbot-with-nginx;
+	}
+
+
+	####	Extensionless PHP
+
+	# Try static files, then extensionless PHP.
+	location / {
+		try_files $uri $uri/ @extensionless-php;
+	}
+
+	# Enable extensionless PHP
 	location @extensionless-php {
 		rewrite ^(.*)$ $1.php last;
 	}
+
+
+	####	Caching & Hidden Files
+
+	# Charset
+	charset utf-8;
+
+	# Cache Static Files
+	location ~* \.(html|css|js|png|jpg|jpeg|gif|ico|svg|eot|woff|ttf)$ { expires max; }
+
+	# Do not allow access to hidden files.
+	location ~ /\. { deny all; }
+	location ~ /\_ { deny all; }
+
+
+	####	GZip
+	gzip on;
+	gzip_vary on;
+	gzip_types text/css text/javascript text/plain text/xml application/json application/x-javascript application/xml application/xml+rss;
+
+	# [OPTION] Enable to increase compresssion slightly. Sacrifices CPU.
+	#gzip_comp_level 9;
+
+
+	####	PHP
 	location ~ \.php$ {
 		try_files $uri =404;
 		include /etc/nginx/fastcgi_params;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		fastcgi_index index.php;
-		include /etc/nginx/fastcgi_params;
-		fastcgi_pass unix:/var/run/php7.0-fpm.sock;
-		fastcgi_param PHP_VALUE "newrelic.appname=devede.org";
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+		# [OPTION] Specify PHP version for Socket.
+
+		# Option 1. [DEFAULT] PHP 7.0
+		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+
+		# Option 2. PHP 5
+		#fastcgi_pass unix:/var/run/php5-fpm.sock;
+
 	}
-	location ~ /\. { deny all; }
-	location ~ /\_ { deny all; }
-	error_page 404 /404.php;
-	add_header Strict-Transport-Security "max-age=63072000";
-	add_header X-Frame-Options DENY;
-	ssl on;
-	ssl_certificate /etc/letsencrypt/live/devede.org/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/devede.org/privkey.pem;
-	ssl_stapling on;
-	ssl_stapling_verify on;
-	ssl_trusted_certificate /etc/letsencrypt/live/devede.org/fullchain.pem;
-	resolver 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 216.146.35.35 216.146.36.36 valid=300s;
-	resolver_timeout 3s;
-	ssl_session_cache shared:SSL:100m;
-	ssl_session_timeout 24h;
-	ssl_session_tickets on;
-	ssl_session_ticket_key /etc/nginx/ssl/ticket.key;
-	ssl_dhparam /etc/nginx/ssl/dhparam4.pem;
-	ssl_ecdh_curve secp384r1;
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-	ssl_prefer_server_ciphers on;
-	ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
+
+
+
+	####	Let's Encrypt Pass-Through
+	include nginx.well-known.conf;
+
+
+	####	SSL Inclusion
+	include nginx.ssl.conf;
+
+	# [OPTION] Put your custom location rules in a file and include them here.
+	#include nginx.custom.conf;
+
 }
