Fix domain references

--- a/_puff/nginx.conf
+++ b/_puff/nginx.conf
@@ -21,7 +21,7 @@ server {
 
 	####	Core Configuration
 	# [OPTION] Server Name
-	server_name devede.org;
+	server_name devede.org www.devede.org;
 
 
 	####	Redirection from HTTP to HTTPS
@@ -62,7 +62,7 @@ server {
 
 	####	Core Configuration
 	# [OPTION] Server Name
-	server_name devede.org;
+	server_name www.devede.org;
 
 
 	####	Logs
