Update for bubbly

--- a/_puff/nginx.conf
+++ b/_puff/nginx.conf
@@ -1,13 +1,10 @@
 ####	Config from Bubbly: Certbot with Nginx v.1.7
 # https://github.com/eustasy/bubbly
 
-# Replace "devede.org" with your domain.
 # Search for [WARNING] to find common warnings.
 # Search for [OPTION] to find options.
 # [DEFAULT] denotes a default option choice.
 
-
-# ~/certbot-with-nginx/renew-ssl.sh -d devede.org -d www.devede.org
 
 
 ####	HTTP Redirection & Verification Block
@@ -39,7 +36,6 @@ server {
 
 
 }
-
 
 
 
@@ -86,14 +82,6 @@ server {
 		default_type 'text/plain';
 		root /tmp/bubbly-authenticator;
 	}
-
-
-	####	Let's Encrypt Pass-Through
-	location '/.well-known/acme-challenge' {
-		default_type 'text/plain';
-		root /tmp/bubbly-authenticator;
-	}
-
 
 
 	####	Security Headers
@@ -236,7 +224,6 @@ server {
 	# Some Forward Secrecy
 	#ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
 
-
 }
 
 
@@ -263,7 +250,7 @@ server {
 	server_name devede.org;
 
 	# [OPTION] Root Path
-	root /path/to/devede.org;
+	root /home/megan/devede.org;
 
 	# [OPTION] Index Entries
 	index index.php index.html index.htm;
@@ -481,6 +468,5 @@ server {
 	# - No IE 6
 	# Some Forward Secrecy
 	#ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
-
 
 }
