--- a/_puff/nginx.conf
+++ b/_puff/nginx.conf
@@ -12,8 +12,8 @@ server {
 
 	####	Listen Directive
 	# Liston on IPv4 & IPv6
-	listen 80 deferred;
-	listen [::]:80 deferred;
+	listen 80;
+	listen [::]:80;
 
 
 	####	Core Configuration
@@ -236,12 +236,12 @@ server {
 	# [WARNING] Making an incorrect selection will result in a non-working site.
 
 	# Option 1. [DEFAULT] HTTP2 for Nginx >= 1.9.5
-	listen 443 deferred ssl http2;
-	listen [::]:443 deferred ssl http2;
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
 
 	# Option 2. SPDY for Nginx < 1.9.5
-	#listen 443 deferred ssl spdy;
-	#listen [::]:443 deferred ssl spdy;
+	#listen 443 ssl spdy;
+	#listen [::]:443 ssl spdy;
 	#spdy_headers_comp 9;
 
 
