Update to NC 1.4

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -25,4 +25,7 @@ engines:
 exclude_paths:
   - "_libs/**"
   - "**.min.css"
+  - "**.custom.css"
   - "**.min.js"
+  - "**.pack.js"
+  - "**.custom.js"
