--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -84,4 +84,7 @@ ratings:
 exclude_paths:
   - "_libs/**"
   - "**.min.css"
+  - "**.custom.css"
   - "**.min.js"
+  - "**.pack.js"
+  - "**.custom.js"
